bad/assign_arr_elem_string_class.example_compiler_output
ERROR
[1mbad/assign_arr_elem_string_class.lat:6:21: [1;31merror: [0;1massigning to `string` from incompatible type `Y`[m
	(new string[3])[1] = new Y;
	                   [1;32m^[m
